third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/round-trip/test_enum_pack_unpack_abort.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/test_enum_pack_unpack_abort.move`

//# publish
module 0x42::m1 {
    enum Result<T0: copy + drop, T1: copy + drop> has copy, drop {
        Ok {
            _0: T0,
        }
        Err {
            _0: T1,
        }
    }
    #[test_variant]
    public fun test_variant_0x42_m1_Result_Ok<T0: copy + drop, T1: copy + drop>(p0: &Result<T0, T1>): bool {
        p0 is Ok
    }
    #[test_variant]
    public fun test_variant_0x42_m1_Result_Err<T0: copy + drop, T1: copy + drop>(p0: &Result<T0, T1>): bool {
        p0 is Err
    }
    #[pack]
    public fun pack_0x42_m1_Result_Ok<T0: copy + drop, T1: copy + drop>(p0: T0): Result<T0, T1> {
        Result::Ok<T0,T1>{_0: p0}
    }
    #[pack]
    public fun pack_0x42_m1_Result_Err<T0: copy + drop, T1: copy + drop>(p0: T1): Result<T0, T1> {
        Result::Err<T0,T1>{_0: p0}
    }
    #[unpack]
    public fun unpack_0x42_m1_Result_Ok<T0: copy + drop, T1: copy + drop>(p0: Result<T0, T1>): T0 {
        let Result::Ok<T0,T1>{_0: _v0} = p0;
        _v0
    }
    #[unpack]
    public fun unpack_0x42_m1_Result_Err<T0: copy + drop, T1: copy + drop>(p0: Result<T0, T1>): T1 {
        let Result::Err<T0,T1>{_0: _v0} = p0;
        _v0
    }
    #[borrow]
    public fun borrow_0x42_m1_Result_0_0_Ok<T0: copy + drop, T1: copy + drop>(p0: &Result<T0, T1>): &T0 {
        &p0._0
    }
    #[borrow]
    public fun borrow_0x42_m1_Result_0_0_Err<T0: copy + drop, T1: copy + drop>(p0: &Result<T0, T1>): &T1 {
        &p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_Result_0_0_Ok<T0: copy + drop, T1: copy + drop>(p0: &mut Result<T0, T1>): &mut T0 {
        &mut p0._0
    }
    #[borrow_mut]
    public fun borrow_mut_0x42_m1_Result_0_0_Err<T0: copy + drop, T1: copy + drop>(p0: &mut Result<T0, T1>): &mut T1 {
        &mut p0._0
    }
}


//# publish
module 0x42::m2 {
    use 0x42::m1;
    public fun test_pack_unpack_abort() {
        let _v0 = m1::pack_0x42_m1_Result_Ok<u64,u64>(42);
        let _v1 = m1::pack_0x42_m1_Result_Ok<u64,u64>(42);
        assert!(_v0 == _v1, 1);
        assert!(m1::unpack_0x42_m1_Result_Err<u64,u64>(_v0) == 42, 2);
    }
}


//# run 0x42::m2::test_pack_unpack_abort